@@ -84,6 +84,7 @@ interface:
 - new method SCIPlpRecalculateObjSqrNorm() which is used when the old calculated square norm was unreliable
 - added SCIPsortPtrBool() and corresponding sorting/inserting/deleting methods in pub_misc.h and necessary defines in misc.c
 - new method SCIPresetParam() to reset the value of a single parameter to its default value
+- new method SCIPpricerIsDelayed() which returns if the pricer is delayed (see pub_pricer.h)
 
 features:
 - constraint handler can now register their upgrade functions for quadratic constraints to cons_quadratic (similar to LINCONSUPGD)
@@ -174,6 +175,7 @@ features:
 - the SoPlex interface can now double check each SoPlex result against CPLEX (lpi_spx.cpp)
 - a XML-parser is available in the src/xml subdirectory
 - can now read XML-solution files as used by CPLEX
+- added new dialog "display pricers" which displays all included pricers 
 
 performance improvements:
 - improved settings/emphasis/cpsolver.set to decrease time per node
